# LIFEY

./: .env.example  .gitignore  AGENTS.md  _redirects  docker-compose.yml  mise.toml  opencode.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.opencode/: frontend-session.md  frontend-structure.md
.opencode/agents/: dev-agent.md  frontend-designer.md  frontend-review.md  opencode-manager.md  project-manager.md  review-agent.md  tech-lead.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  exception_handlers.py  exceptions.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 001_add_auth_and_household_tables.py
backend/app/modules/auth/: models.py  router.py  schemas.py  services.py
backend/app/modules/household/: models.py  router.py  schemas.py  services.py
backend/app/shared/: base.py  database.py  pagination.py  schemas.py
backend/tests/: conftest.py  factories.py
backend/tests/modules/auth/: test_routers.py  test_services.py
backend/tests/modules/household/: test_routers.py  test_services.py
docs/adr/: 0001-foundational-tech-stack.md  0002-installable-spa-architecture.md  (+11 more)
frontend/: .env.example  .eslintrc.cjs  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: build-docs.js  convert-templates.js  gen-invite.mjs  revoke-invite.mjs  validate-tests.js
supabase/: config.toml
(+149 files in other folders)
